--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,8 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - href: Projects.qmd
+        text: Projects
 
 format:
   html:
@@ -16,4 +18,7 @@ format:
     toc: true
 
 editor: visual
+
+execute: 
+  freeze: auto
 
